tests/trybuild/cannot_call_union_on_traced_union_result.stderr
error[E0599]: the method `union` exists for enum `Result<(), ErrorUnion>`, but its trait bounds were not satisfied
 --> tests/trybuild/cannot_call_union_on_error_union_result.rs:8:25
  |
8 |     let _error = result.union();
  |                         ^^^^^
  |
 ::: $RUST/core/src/result.rs
  |
  | pub enum Result<T, E> {
  | --------------------- doesn't satisfy `_: Union<(), ErrorUnion<(Box<dyn SendSyncError>,)>>`
  |
 ::: src/error_union.rs
  |
  | pub struct ErrorUnion<E: TypeSet = (Box<dyn SendSyncError>,)> {
  | -------------------------------------------------------------- doesn't satisfy `_: SendSyncError`
  |
  = note: the following trait bounds were not satisfied:
          `ErrorUnion<(Box<dyn SendSyncError>,)>: SendSyncError`
          which is required by `Result<(), ErrorUnion<(Box<dyn SendSyncError>,)>>: eros::Union<(), ErrorUnion<(Box<dyn SendSyncError>,)>>`
